<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QLSinhVien</string>
    <string name="hello_world">Hello world!</string>
    <string name="txtHeader">Quản Lý Sinh Viên</string>
    <string name="txtTen">Tên:</string>
    <string name="editTen">Tên</string>
    <string name="txtLop">Lớp:</string>
    <string name="editLop">Lớp</string>
    <string name="txtLy">Lý:</string>
    <string name="editLy">Lý</string>
    <string name="txtToan">Toán:</string>
    <string name="editToan">Toán</string>
    <string name="btnAdd">Add</string>
    <string name="btnList">List</string>

</resources>